<resources>

    <string name="app_name">PoliConnect 2.0</string>
    <string name="policonnect">PoliConnect</string>
    <string name="toast_backagain">Presione una vez mas para cerrar PoliConnect</string>
    <string name="string_dummy">Hola,\n¿Qué hace?</string>
    <string name="progressdialog_pleasewait">Por favor espere</string>

    <!-- Strings para Login-->
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_enter">Iniciar Sesión</string>
    <string name="toast_nouser">Ingrese su usuario</string>
    <string name="toast_nopass">Ingrese su contraseña</string>
    <string name="toast_nocoincidence">Datos incorrectos</string>
    <string name="progressdialog_loggin">Iniciando Sesión</string>

    <!-- Main Activity -->
    <string name="progressdialog_gettingdb">Obteniendo Datos</string>

    <!-- Pantalla Usuario -->
    <string name="horario">Horario</string>
    <string name="solicitud">Smart Campus</string>
    <string name="messageDialog">¿Esta seguro de que desea cerrar sesion?</string>
    <string name="titleDialog">Cerrar Sesion</string>
    <string name="positiveDialog">Estoy Seguro</string>
    <string name="negativeDialog">Cancelar</string>
    <string name="notas">Notas</string>
    <string name="nota">Nota</string>
    <string name="aprobado">Aprobado</string>
    <string name="reprobado">Reprobado</string>
    <string name="cursando">Cursando</string>
    <string name="indicador">Indicador</string>
    <string name="materia">Materia</string>

    <string name="nombreUsuarioAutenticado">Alejandro Arévalo</string><!--Se reemplaza por variable en MainActivity-->
    <string name="codigoUsuarioAutenticado">1520010902</string><!--Se reemplaza por variable en MainActivity-->
    <string name="siguienteClase">Siguiente Clase:</string>
    <string name="nombreClase">Práctica Aplicada</string><!--Se reemplaza por variable en MainActivity-->
    <string name="fechaHoraClase">Sábado 12:00 p.m.</string><!--Se reemplaza por variable en MainActivity-->
    <string name="salonClase">C-101</string>

    <string name="comentBackgroundHeader">Fondo de encabezado de pantalla de Usuario</string>
    <string name="comentBackgroundMiddle">Fondo de pantalla con foto del Poli</string>
    <string name="comentBotonConfig">Icono para boton de configuracion</string>
    <string name="comentBotonNotas">Icono para boton de pantalla de notas</string>
    <string name="comentBotonSolicitud">Icono para boton de pantalla de solicitudes</string>
    <string name="comentBotonHorario">Icono para boton de pantalla de Horario</string>

    <!-- Pantalla Principal Biblioteca -->

    <string name="numerogenerico">15</string>

    <string name="cubiculosVideo">Cubículos de Video</string>
    <string name="cubiculosEstudio">Cubículos de Estudio</string>
    <string name="computadores">Computadores</string>
    <string name="recursos">Recursos</string>
    <string name="servicio">Servicio</string>
    <string name="cubiculo">Cubículo</string>
    <string name="computador">Computador</string>

    <string name="comentBackgroundBiblioteca">Fondo de pantalla con foto de la biblioteca</string>
    <string name="comentBotonComputadores">Icono de boton para computadores</string>
    <string name="comentBotonEstudio">Icono de boton para Cubiculos de estudio</string>
    <string name="comentBotonVideo">Icono de boton para Cubiculos de video</string>
    <string name="comentBotonRecursos">Icono de boton para Recursos de la biblioteca</string>
    <string name="comentVistaDisponibilidad">Imagen de fondo para capacidad del servicio</string>

    <!-- Pantalla Principal Bienestar -->
    <string name="comentBackgroudBienestar">Fondo de pantalla con foto del poli</string>
    <string name="comentBotonTenisMesa">Icono de boton para Tenis de mesa</string>
    <string name="comentBotonDanza">Icono de boton para Danza</string>
    <string name="comentBotonGuitarraE">Icono de boton para guitarra Eléctrica</string>
    <string name="comentBotonGuitarraA">Icono de boton para guitarra Acustica</string>
    <string name="comentBotonGym">Icono de boton para Gimnasio</string>
    <string name="comentBotonPintura">Icono de Boton para Pintura</string>
    
    <!-- SubPantallas Bienestar (constantes) -->
    <string name="lugar">Lugar: </string>
    <string name="profesor">Profesor: </string>
    <string name="horarios">Horarios: </string>
    <string name="temporal">Temporal :v</string>

    <!-- Comment de elementos generales -->
    <string name="comentBackgroundFooter">Fondo de pie de pagina de pantalla de Usuario</string>
    <string name="comentBotonBiblioteca">Icono para boton de pantalla de Biblioteca</string>
    <string name="comentBotonBienestar">Icono para boton de pantalla de Bienestar Universitario</string>
    <string name="comentBotonUsuario">Icono para boton de pantalla de Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
