<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="1000dp"
        android:layout_marginStart="-10dp"
        android:background="@drawable/background_poli03" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundBlue"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_dummy2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/policonnect"
            android:textColor="#ffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/rokkitt"
            android:hint="@string/hint_user"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white">
        </EditText>

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/rokkitt"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white">
        </EditText>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_blueaccent_medium"
            android:fontFamily="@font/rokkitt"
            android:text="@string/button_enter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>
