<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragments.PantallaBienestar">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1044dp"
        android:layout_height="916dp"
        android:alpha="0.7"
        android:src="@drawable/background_bienestar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="150dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="150dp" />

    <ImageButton
        android:id="@+id/tenisButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonTenisMesa"
        android:src="@drawable/tenismesa"
        app:layout_constraintBottom_toTopOf="@+id/electricGuitarButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/electricGuitarButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonGuitarraE"
        android:src="@drawable/guitarra"
        app:layout_constraintBottom_toTopOf="@+id/gymButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenisButton" />

    <ImageButton
        android:id="@+id/gymButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonGym"
        android:src="@drawable/gym"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electricGuitarButton" />

    <ImageButton
        android:id="@+id/dancingButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonDanza"
        android:src="@drawable/danza"
        app:layout_constraintBottom_toTopOf="@+id/acousticGuitarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/acousticGuitarButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonGuitarraA"
        android:src="@drawable/acustica"
        app:layout_constraintBottom_toTopOf="@+id/drawButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/dancingButton" />

    <ImageButton
        android:id="@+id/drawButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonPintura"
        android:src="@drawable/pintura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/acousticGuitarButton" />

</android.support.constraint.ConstraintLayout>