<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="5dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/stateFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/short_rectangle_green" />

        <ImageView
            android:id="@+id/subjectFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:paddingStart="50dp"
            android:src="@drawable/long_rectangle_white" />

    </LinearLayout>



        <TextView
            android:id="@+id/itemState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingLeft="21dp"
            android:paddingTop="1dp"
            android:shadowColor="@color/shadow"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/servicio"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingLeft="172dp"
            android:paddingTop="1dp"
            android:shadowColor="@color/shadow"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/nota"
            android:textColor="@color/grey"
            android:textSize="15dp" />


    <TextView
        android:id="@+id/itemGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingLeft="320dp"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/numerogenerico"
        android:textColor="@color/grey"
        android:textSize="15dp" />

</RelativeLayout>