<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragments.PantallaBiblioteca">

    <!-- TODO: Update blank fragment layout -->


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="84dp" />

    <ImageView
        android:id="@+id/backgroundLibrary"
        android:layout_width="1019dp"
        android:layout_height="867dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.7"
        android:contentDescription="@string/comentBackgroundBiblioteca"
        android:src="@drawable/background_biblioteca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/computerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonComputadores"
        android:src="@drawable/computer"
        app:layout_constraintBottom_toTopOf="@+id/studyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/studyButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonEstudio"
        android:src="@drawable/study"
        app:layout_constraintBottom_toTopOf="@+id/videoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerButton" />

    <ImageButton
        android:id="@+id/videoButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonVideo"
        android:src="@drawable/video"
        app:layout_constraintBottom_toTopOf="@+id/resourceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyButton" />

    <ImageButton
        android:id="@+id/resourceButton"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentBotonRecursos"
        android:src="@drawable/resources"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoButton" />

    <ImageView
        android:id="@+id/capacityLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/comentVistaDisponibilidad"
        android:src="@drawable/capacity"
        app:layout_constraintBottom_toBottomOf="@+id/computerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/computerButton"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/capacityStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/comentVistaDisponibilidad"
        android:src="@drawable/capacity"
        app:layout_constraintBottom_toBottomOf="@+id/studyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/studyButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/capacityVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/comentVistaDisponibilidad"
        android:src="@drawable/capacity"
        app:layout_constraintBottom_toBottomOf="@+id/videoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/videoButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/numberCapacityComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/numerogenerico"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/capacityLibrary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/capacityLibrary" />

    <TextView
        android:id="@+id/numberCapacityStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/numerogenerico"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/capacityStudy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/capacityStudy" />

    <TextView
        android:id="@+id/numberCapacityVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/numerogenerico"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/capacityVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/capacityVideo" />

</android.support.constraint.ConstraintLayout>